--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,6 +2,7 @@
 
 <form method="POST" enctype='multipart/form-data'>
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form.as_table }}
+    <br>
     <input type="submit" value="Submit">
 </form>
